--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins:latest
+FROM jenkins/jenkins:2.289.3-lts-jdk11
 RUN yum install maven -y
 RUN sudo amazon-linux-extras install java-openjdk11 -y
 RUN service jenkins start
